--- a/DOM/dom4.html
+++ b/DOM/dom4.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <div id="move" onmousemove="move()" style="height: 400px;width: 550px; border: 1px solid black;">
-        <img src="./virat kohli.jpg" alt="" style="height: 100%;width: 100%;">
+    <div  onmousemove="move()" style="height: 400px;width: 550px; border: 1px solid black;">
+        <img src="./virat kohli.jpg" id="image" alt="" height="400px" width="550px">
     </div>
     <script src="./dom4.js"></script>
 </body>
